TESTE COM O SAULO

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
         <h1>LOGO</h1>
     </div>
     <div class="menu-buttons">
-        <a mat-raised-button href="/users" target="_blank">Users</a>
-        <a mat-raised-button href="/lights" target="_blank">Lights</a>
+        <a mat-raised-button routerLink="/users">Users</a>
+        <a mat-raised-button routerLink="/lights">Lights</a>
     </div>
 </mat-toolbar>
