--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,1 +1,48 @@
-<p>Hello Ellen</p>
+<div class="container">
+    <div class="row d-flex justify-content-around">
+        <div class="col-10">
+
+          <mat-form-field class="search">
+            <mat-label>Search</mat-label>
+            <input matInput type="text" [(ngModel)]="value">
+          </mat-form-field>
+          <button mat-button matSuffix mat-icon-button aria-label="Search" (click)="applyFilter(value)">
+            <mat-icon>search</mat-icon>
+          </button>
+
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  
+              <!-- Id Column -->
+              <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef> Id </th>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+              </ng-container>
+
+              <!-- RA Column -->
+              <ng-container matColumnDef="ra">
+                <th mat-header-cell *matHeaderCellDef> R.A </th>
+                <td mat-cell *matCellDef="let element"> {{element.ra}} </td>
+              </ng-container>
+            
+              <!-- Name Column -->
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              </ng-container>
+            
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              
+              <!-- Row shown when there is no matching data. -->
+              <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+              </tr>
+            </table>
+        </div>
+        <div class="col-2 botoes">
+            <button mat-raised-button>New User</button>
+            <button mat-raised-button>Edit User</button>
+            <button mat-raised-button>Delete Select</button>
+        </div>
+    </div>
+</div>
