Comite para fazer coisas na praia

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,6 +4,6 @@
     </div>
     <div class="menu-buttons">
         <a mat-raised-button routerLink="/users">Users</a>
-        <a mat-raised-button routerLink="/lights">Lights</a>
+        <a mat-raised-button routerLink="/lampadas">Lights</a>
     </div>
 </mat-toolbar>
