--- a/src/app/users/_modal/user.component.html
+++ b/src/app/users/_modal/user.component.html
@@ -6,7 +6,7 @@
     <div class="row principal-content">
         <mat-form-field appearance="legacy" class="input">
             <mat-label>Nome</mat-label>
-            <input matInput [(ngModel)]="user.name">
+            <input matInput [(ngModel)]="user.nome">
         </mat-form-field>
     </div>    
 </div>
