--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar class="menu">
     <div class="menu-logo">
-        <h1>LOGO</h1>
+        <img
+            routerLink="/"
+            src="../../assets/img/logo.png" width="100%" />
     </div>
     <div class="menu-buttons">
         <a mat-raised-button routerLink="/users">Users</a>
