--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -20,6 +20,7 @@
     width: 10%;
     justify-content: space-around;
 }
-.menu-logo h1{
-    text-align: center;
+
+.menu-logo img:hover{
+    cursor: pointer;
 }
